--- a/packages/panel/client/src/styles/styles.css
+++ b/packages/panel/client/src/styles/styles.css
@@ -15,6 +15,9 @@
   --color-red-600: #bd4833;
   --color-red-700: #8f3627;
 
+  --color-cyan: #86E9FF;
+  --color-emerald: #1FE39E;
+
   --spacing-page-width: 1400px;
   --spacing-nav-height: 57px;
   --spacing-content-height: calc(100vh - var(--spacing-nav-height));
@@ -52,5 +55,9 @@
     border: 1px solid var(--color-ui-700);
     border-radius: var(--radius-sm);
     color: var(--color-ui-100);
+  }
+
+  a.link {
+    @apply flex items-center gap-1 mb-4 text-sm text-ui-500 hover:text-emerald underline;
   }
 }
