feat(panel): wip

--- a/packages/panel/client/src/styles/styles.css
+++ b/packages/panel/client/src/styles/styles.css
@@ -14,6 +14,7 @@
   --color-red-500: #f55d42;
   --color-red-600: #bd4833;
   --color-red-700: #8f3627;
+  --color-red-950: #3d1812;
 
   --color-cyan: #86E9FF;
   --color-emerald: #1FE39E;
